Google api added

--- a/app/components/home/html/home.html
+++ b/app/components/home/html/home.html
@@ -1,1 +1,7 @@
-<h1>Home page</h1>
+
+<div class="mdl-grid portfolio-max-width">
+    <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop  mdl-card mdl-shadow--4dp">
+        <h1>Home page</h1>
+        <span id="googleSignIn" ng-show="!signedIn"><span id="signInButton"></span></span>
+    </div>
+</div>
