--- a/app/components/home/html/home.html
+++ b/app/components/home/html/home.html
@@ -8,7 +8,7 @@
             </button>
         </div>
         <ul class="demo-list-three mdl-list" ng-repeat="mail in mailList">
-            <li class="mdl-list__item mdl-list__item--three-line">
+            <li class="mdl-list__item mdl-list__item--three-line cursor" ng-click="toggleModal(mail.snippet);">
                 <span class="mdl-list__item-primary-content">
                   <i class="material-icons mdl-list__item-avatar">e</i>
                   <span>{{mail.id}} </span>
@@ -20,6 +20,9 @@
         </ul>
     </div>
 </div>
+
+<modal-dialog show='modalShown' item-data='itemData' width='750px' height='750px'>
+</modal-dialog>
 
 
 
