--- a/app/components/home/html/home.html
+++ b/app/components/home/html/home.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 
-<modal-dialog show='modalShown' item-data='itemData' width='750px' height='750px'>
+<modal-dialog show='modalShown' item-data='itemData' width='750px' height='750px' class="modal-dialog">
 </modal-dialog>
 
 
