Moved directives to own folder

--- a/app/components/home/html/home.html
+++ b/app/components/home/html/home.html
@@ -1,4 +1,4 @@
-<div class="mdl-grid portfolio-max-width">
+<div class="mdl-grid portfolio-max-width" >
     <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop  mdl-card mdl-shadow--4dp">
         <h3 class="mdl-typography--text-center">Google mailer box</h3>
         <span class="mdl-typography--text-center" id="googleSignIn" ng-hide="signedIn"><span id="signInButton"></span></span>
@@ -7,10 +7,10 @@
                     class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Sign Out
             </button>
         </div>
-        <ul class="demo-list-three mdl-list" ng-repeat="mail in mailList">
+        <ul class="demo-list-three mdl-list" ng-repeat="mail in mailList" >
             <li class="mdl-list__item mdl-list__item--three-line cursor" ng-click="toggleModal(mail.threadId);">
                 <span class="mdl-list__item-primary-content">
-                  <i class="material-icons mdl-list__item-avatar">e</i>
+                  <i class="material-icons mdl-list__item-avatar">M</i>
                   <span>{{mail.id}} </span>
                   <span class="mdl-list__item-text-body">
                     {{mail.threadId}}
